[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/gameplay/Balloon.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/gameplay/balloon_normal.tex" type="Texture" id=2]
[ext_resource path="res://assets/textures/gameplay/balloon.tex" type="Texture" id=3]
[ext_resource path="res://assets/sfx/balloon.smp" type="Sample" id=4]
[ext_resource path="res://assets/textures/gameplay/particle_balloon.tex" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CanvasItemShader" id=19]

_code = { "fragment":"uniform texture normal;\n//normal maps expect Y-up, but 2D is Y-down, so must mirror this.\nNORMALMAP = tex(normal,UV).rgb * vec3(2.0,-2.0,1.0) - vec3(1.0,-1.0,0.0);", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=20]

shader/shader = SubResource( 19 )
shader/shading_mode = 0
shader_param/normal = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=14]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="SampleLibrary" id=7]

samples/balloon = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SamplePlayer2D:play/play")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.1 ), "transitions":FloatArray( 1 ), "update":2, "values":[ "balloon" ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:config/emitting")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.1 ), "transitions":FloatArray( 1 ), "update":2, "values":[ true ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Balloon:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }

[sub_resource type="Animation" id=9]

resource/name = "init"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Balloon:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }

[node name="BalloonBody" type="RigidBody2D" groups=[ "balloon-body" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.12704, 0, 0, 3.62449, -0.537382, -6.42814 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = -4.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
modulate = Color( 1, 1, 1, 1 )
debug = false
debug_explode = false

[node name="Balloon" type="Sprite" parent="."]

visibility/opacity = 0.8
material/material = SubResource( 20 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -0.537382, -6.42814 )
transform/scale = Vector2( 3.12704, 3.62449 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 14 )
shapes/0/transform = Matrix32( 3.3235, 0, 0, 4.14838, -0.171517, -4.47904 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

visibility/visible = false
transform/pos = Vector2( -0.171517, -4.47904 )
transform/scale = Vector2( 3.3235, 4.14838 )
shape = SubResource( 14 )
trigger = false
_update_shape_index = 0

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 7 )
config/pitch_random = 0.0

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 100
config/lifetime = 0.2
config/preprocess = 0.1
config/emit_timeout = 0.4
config/emitting = false
config/texture = ExtResource( 5 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 150.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 1.0
randomness/direction = 1.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
randomness/anim_initial_pos = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = SubResource( 8 )
anims/init = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "init"

[node name="Rope" type="Position2D" parent="."]

transform/pos = Vector2( 0, 40 )

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="mouse_enter" from="Area2D" to="." method="_on_Area2D_mouse_enter"]

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


